// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should highlight the word at front 1`] = `
<DynaHighlightText
  highlightWords="secret"
  sourceText="Secret world"
>
  <u
    key="0-0"
  >
    Secret
  </u>
   world
</DynaHighlightText>
`;

exports[`Home should highlight the word at the end 1`] = `
<DynaHighlightText
  highlightWords="world"
  sourceText="Secret world"
>
  Secret 
  <u
    key="7-0"
  >
    world
  </u>
</DynaHighlightText>
`;

exports[`Home should highlight the word at the end 2`] = `
<DynaHighlightText
  highlightWords="Secret"
  sourceText="The secret world"
>
  The 
  <u
    key="4-0"
  >
    secret
  </u>
   world
</DynaHighlightText>
`;

exports[`Home should highlight two words 1`] = `
<DynaHighlightText
  highlightWords="world Secret"
  sourceText="The secret world"
>
  The 
  <u
    key="4-1"
  >
    secret
  </u>
   
  <u
    key="11-0"
  >
    world
  </u>
</DynaHighlightText>
`;
